RE-373 Add EntityCoins, ItemCoins, Codestyle Checks + refactor to google checkcodestyles